# sagemaker-hyperpod-cli

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  NOTICE  README.md  THIRD-PARTY  config.yaml  inference-demo-Copy1.ipynb  inference-demo.ipynb  pyproject.toml  setup.cfg  setup.py  test-integ  test-new-integ  test-workflow  tox.ini
.github/: pull_request_template.md
.github/workflows/: code-coverage.yml  codebuild-ci.yml  codeql.yml  security-monitoring.yml
.ipynb_checkpoints/: inference-demo-Copy1-checkpoint.ipynb  inference-demo-checkpoint.ipynb
custom_inference_config_schemas/: pyproject.toml
custom_inference_config_schemas/custom_inference_config_schemas/: registry.py
custom_inference_config_schemas/custom_inference_config_schemas/v1_0/: model.py  schema.json
doc/: Makefile  advanced_resources.md  cli_commands_examples.md  cli_commands_reference.md  cli_inference.md  cli_install_configure.md  cli_reference.md  cli_training.md  conf.py  examples.md  getting_started.ipynb  getting_started.md  index.md  index.rst  inference.md  installation.ipynb  installation.md  requirements.txt  training.md
doc/_static/: custom.css
doc/api/: api_index.rst  inference_api.rst  metadata.rst  training_api.rst
doc/cli/: cli_index.rst  cli_reference.md
doc/design/: hyp_ssh_design.md
doc/getting_started/: cluster_management.rst  inference.md  space.md  training.md
doc/sdk/: sdk_index.rst
examples/: basic-job-example-config.yaml
examples/cluster_management/: cluster_creation_init_experience.ipynb  cluster_creation_sdk_experience.ipynb
examples/end_to_end_walkthrough/: README.md
examples/observability/: observability.ipynb
helm_chart/: .gitignore  get_helm.sh  install_dependencies.sh  install_rig_dependencies.sh  readme.md
helm_chart/HyperPodHelmChart/: Chart.yaml  values.yaml
helm_chart/HyperPodHelmChartForRIG/: .helmignore  Chart.yaml  values.yaml
hyperpod-cluster-stack-template/: CHANGELOG.md  README.md  pyproject.toml
hyperpod-cluster-stack-template/hyperpod_cluster_stack_template/: creation_template.yaml  registry.py
hyperpod-cluster-stack-template/hyperpod_cluster_stack_template/v1_0/: model.py  schema.json  template.py
hyperpod-custom-inference-template/: CHANGELOG.md  README.md  pyproject.toml
hyperpod-custom-inference-template/hyperpod_custom_inference_template/: registry.py
hyperpod-custom-inference-template/hyperpod_custom_inference_template/v1_0/: model.py  schema.json  template.py
hyperpod-custom-inference-template/hyperpod_custom_inference_template/v1_1/: model.py  schema.json  template.py
hyperpod-custom-inference-template/hyperpod_custom_inference_template/v1_2/: model.py  schema.json  template.py
hyperpod-dev-space-template/: pyproject.toml  update_schema.py
hyperpod-dev-space-template/hyperpod_dev_space_template/: registry.py
hyperpod-dev-space-template/hyperpod_dev_space_template/v1_0/: model.py  schema.json
hyperpod-jumpstart-inference-template/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
hyperpod-jumpstart-inference-template/hyperpod_jumpstart_inference_template/: registry.py
hyperpod-jumpstart-inference-template/hyperpod_jumpstart_inference_template/v1_0/: model.py  schema.json  template.py
hyperpod-jumpstart-inference-template/hyperpod_jumpstart_inference_template/v1_1/: model.py  schema.json  template.py
hyperpod-jumpstart-inference-template/hyperpod_jumpstart_inference_template/v1_2/: model.py  schema.json  template.py
hyperpod-pytorch-job-template/: CHANGELOG.md  README.md  pyproject.toml
hyperpod-pytorch-job-template/hyperpod_pytorch_job_template/: create_dataclass.py  registry.py
hyperpod-pytorch-job-template/hyperpod_pytorch_job_template/v1_0/: __init__.py  model.py  quota_allocation_util.py  schema.json  template.py
hyperpod-pytorch-job-template/hyperpod_pytorch_job_template/v1_0/recipes/hf/: model.py
hyperpod-pytorch-job-template/hyperpod_pytorch_job_template/v1_0/recipes/neuron_hf/: model.py
hyperpod-pytorch-job-template/hyperpod_pytorch_job_template/v1_0/recipes/nova/: model.py
hyperpod-pytorch-job-template/hyperpod_pytorch_job_template/v1_0/recipes/nova_evaluation/: model.py
hyperpod-pytorch-job-template/hyperpod_pytorch_job_template/v1_1/: model.py  quota_allocation_util.py  schema.json  template.py
hyperpod-pytorchjob-config-schemas/: pyproject.toml
hyperpod-pytorchjob-config-schemas/config_schemas/v1_0/: model.py  schema.json
hyperpod-pytorchjob-config-schemas/hyperpod_pytorchjob_config_schemas/v1_0/: model.py  schema.json
hyperpod-space-template/: CHANGELOG.md  pyproject.toml  update_schema.py
hyperpod-space-template/hyperpod_space_template/: registry.py
hyperpod-space-template/hyperpod_space_template/v1_0/: model.py  schema.json
hyperpod-space-template/hyperpod_space_template/v1_1/: model.py  schema.json
jumpstart_inference_config_schemas/: pyproject.toml
jumpstart_inference_config_schemas/jumpstart_inference_config_schemas/v1_0/: model.py
result/test_custom/: test_custom_submission.sh
sagemaker-hyperpod/: .env  setup.cfg  setup.py
sagemaker-hyperpod/examples/: inference-fsx-model-e2e.ipynb  inference-jumpstart-e2e.ipynb  inference-s3-model-e2e.ipynb  training_sdk_example.ipynb
src/hyperpod_cli/: __init__.py  cli.py  training_cli.py  utils.py
test/: README.md  conftest.py  test_cluster.py  test_hyperpod_cli.py  test_job.py  test_pod.py  test_utils.py
test/clients/: test_kubernetes_client.py
test/integration_tests/: abstract_integration_tests.py  conftest.py  test_happy_case.py  utils.py
test/service/: test_cancel_training_job_service.py  test_describe_training_job_service.py  test_exec_command_service.py  test_get_logs_service.py  test_list_pods_service.py  test_list_training_jobs_service.py
test/unit_tests/: test_cluster.py  test_cluster_timeout.py  test_describe_cluster.py  test_hyperpod_cli.py  test_hyperpod_manager.py  test_hyperpod_space.py  test_hyperpod_space_template.py  test_job.py  test_kubernetes_auth_error_handling.py  test_pod.py  (+2 more)
tmp-model/: service-2.json
(+824 files in other folders)
