[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperpod-jumpstart-inference-template"
version = "1.0"
readme = "README.md"
authors = [{name = "Amazon Web Services"}]
license = {text = "Apache-2.0"}
description = "Versioned JSON-schema + Pydantic models for JumpStart configs"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["hyperpod_jumpstart_inference_template*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# for each versioned subpackage, include schema.json
"hyperpod_jumpstart_inference_template.v1_0" = ["schema.json"]
