[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperpod-pytorch-job-config-schema-v1_0_0"
version = "1.0"
description = "Config schema for HyperPod PyTorch Job v1.0.0"
requires-python = ">=3.9"
dependencies = [
    "pydantic==2.11.7",
]

[tool.setuptools.packages.find]
# find all subpackages under custom_inference_config_schemas
where = ["."]
include = ["hyperpod_pytorchjob_config_schemas*"]

[tool.setuptools]
# tells setuptools to include package_data entries below
include-package-data = true

[tool.setuptools.package-data]
# for each versioned subpackage, include schema.json
"hyperpod_pytorchjob_config_schemas.v1_0" = ["schema.json"]

[project.entry-points."mycli.config_versions"]
"1.0" = "hyperpod_pytorchjob_config_schemas.v1_0:PyTorchJobConfig"